--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
 					</section>
 					<section>
 						<h2>Why do we use Node.JS?</h2>
-						<p></p>
+						<ul>
+							<li class="fragment">It's asynchronous, which means better performance</li>
+							<li class="fragment">Javascript is the one language to rule them all, whether we like it or not
+							<li class="fragment">It makes realtime apps way easier</li>
+							<li class="fragment">It's IO/networking/disk libraries are modern.</li>
+							<li class="fragment">Javascript uses closures, a powerful programming tool.</li>
+						</ul>
 					</section>
 				</section>
 
@@ -134,15 +140,33 @@
 							<i style="color:#85CCD5;">sails new &lt;project_name&gt;</i>
 						</p>
 						<p class="fragment">
-							
+							<i style="color:#85CCD5;">sails lift</i>
+						</p>
+					</section>
+					<section>
+						<h2>Waterline</h2>
+						<p>
+							Waterline is a brand new kind of storage and retrieval engine.
+						</p>
+						<p class="fragment">
+							A uniform API for accessing different kinds of databases, protocols, and 3rd party APIs. 
+						</p>
+					</section>
+					<section>
+						<h2>"Socket" to them!</h2>
+						<p>
+							Sails.js allows for the use of sockets and websockets by default.
+						</p>
+						<p class="fragment">
+							Realtime IO apps for the Realtime World.
 						</p>
 					</section>
 				</section>
 
 				<section>
-					<h2>rvl.io</h2>
+					<h2>Diving Deeper</h2>
 					<p>
-						If you don't like writing slides in HTML you can use the online editor <a href="http://www.rvl.io" target="_blank">rvl.io</a>.
+						
 					</p>
 				</section>
 
