--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ function linkify( selector ) {
 				controls: true,
 				progress: true,
 				history: true,
-				center: true,
+				center: false,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
 				transition: 'zoom', // default/cube/page/concave/zoom/linear/fade/none
